<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/colorPurple"
  tools:context="com.am.quizapp.QuizActivity">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:orientation="vertical">

    <FrameLayout
      style="@style/styleFrameLayout"
      android:elevation="4dp"
      tools:ignore="UnusedAttribute">

      <TextView
        android:id="@+id/question_1_text_view"
        style="@style/styleTextView"
        android:text="@string/question_one"/>

    </FrameLayout>

    <RadioGroup
      android:id="@+id/radiogroup_1"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:orientation="horizontal">

      <RadioButton
        android:id="@+id/question_1_true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/true_radiobutton"/>

      <RadioButton
        android:id="@+id/question_1_false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/false_radiobutton"/>

    </RadioGroup>

    <FrameLayout
      style="@style/styleFrameLayout"
      android:elevation="4dp"
      tools:ignore="UnusedAttribute">

      <TextView
        android:id="@+id/question_2_text_view"
        style="@style/styleTextView"
        android:text="@string/question_two"/>

    </FrameLayout>

    <CheckBox
      android:id="@+id/question_2_chb_1"
      style="@style/styleCheckBox"
      android:layout_marginTop="8dp"
      android:text="@string/question_two_chb_1"/>

    <CheckBox
      android:id="@+id/question_2_chb_2"
      style="@style/styleCheckBox"
      android:layout_marginTop="4dp"
      android:text="@string/question_two_chb_2"/>

    <CheckBox
      android:id="@+id/question_2_chb_3"
      style="@style/styleCheckBox"
      android:layout_marginTop="8dp"
      android:text="@string/question_two_chb_3"/>

    <CheckBox
      android:id="@+id/question_2_chb_4"
      style="@style/styleCheckBox"
      android:layout_marginTop="4dp"
      android:text="@string/question_two_chb_4"/>

    <FrameLayout
      style="@style/styleFrameLayout"
      android:elevation="4dp"
      tools:ignore="UnusedAttribute">

      <TextView
        android:id="@+id/question_3_text_view"
        style="@style/styleTextView"
        android:text="@string/question_three"/>

    </FrameLayout>

    <RadioGroup
      android:id="@+id/radiogroup_3"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:orientation="horizontal">

      <RadioButton
        android:id="@+id/question_3_true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/true_radiobutton"/>

      <RadioButton
        android:id="@+id/question_3_false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/false_radiobutton"/>

    </RadioGroup>

    <FrameLayout
      style="@style/styleFrameLayout"
      android:elevation="4dp"
      tools:ignore="UnusedAttribute">

      <TextView
        android:id="@+id/question_4_text_view"
        style="@style/styleTextView"
        android:text="@string/question_four"/>

    </FrameLayout>

    <CheckBox
      android:id="@+id/question_4_chb_1"
      style="@style/styleCheckBox"
      android:layout_marginTop="8dp"
      android:text="@string/question_four_chb_1"/>

    <CheckBox
      android:id="@+id/question_4_chb_2"
      style="@style/styleCheckBox"
      android:layout_marginTop="4dp"
      android:text="@string/question_four_chb_2"/>

    <CheckBox
      android:id="@+id/question_4_chb_3"
      style="@style/styleCheckBox"
      android:layout_marginTop="8dp"
      android:text="@string/question_four_chb_3"/>

    <CheckBox
      android:id="@+id/question_4_chb_4"
      style="@style/styleCheckBox"
      android:layout_marginTop="4dp"
      android:text="@string/question_four_chb_4"/>

    <FrameLayout
      style="@style/styleFrameLayout"
      android:elevation="4dp"
      tools:ignore="UnusedAttribute">

      <TextView
        android:id="@+id/question_5_text_view"
        style="@style/styleTextView"
        android:text="@string/question_five"/>

    </FrameLayout>

    <EditText
      android:id="@+id/question_5_edittext"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="4dp"
      android:inputType="text"
      android:textAppearance="?android:textAppearanceMedium"/>


    <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:orientation="horizontal">

      <Button
        android:id="@+id/back_button"
        style="@style/styleButton"
        android:background="@color/colorBlueGreyDark"
        android:text="@string/back_button"/>

      <Button
        android:id="@+id/submit_button"
        style="@style/styleButton"
        android:background="@color/colorGreenDard"
        android:text="@string/submit_button"/>

      <Button
        android:id="@+id/reset_button"
        style="@style/styleButton"
        android:background="@color/colorPinkDark"
        android:text="@string/reset_button"/>

    </LinearLayout>

  </LinearLayout>

</ScrollView>
